2008-09-23  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-applets branched for GNOME 2.24.
	Added stable branch to billreminder.

2008-09-23  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gok branched fro GNOME 2.24, track gtranslator HEAD
	again.

2008-09-22  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:  Cheese, ekiga and mousetweaks branched for GNOME 2.24.

2008-09-22  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-{themes,games,terminal}, gucharmap, tomboy,
	evolution, evolution-data-server and evolution-exchange branched for GNOME 2.24.

2008-09-22  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: release-notes 2.24 in gnome-infrastructure.

2008-09-20  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: empathy branched for GNOME 2.24.

2008-09-19  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Added release-notes 2.24 branch.

2008-09-19  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: glib and gtk+ branched (glib-2-18 and gtk-2-14).

2008-09-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: glade3 HEAD is no more string frozen.

2008-09-17  Claude Paroz  <claude@2xlibre.net>

	* update-stats.py: Make notify_list() handle utf-8 in diff argument.

2008-09-17  Gil Forcada  <gforcada@gnome.org>

	* releases.xml.in: glade3 will use gnome-2-22 branch for GNOME 2.24

2008-09-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: hamster-applet should be string frozen.

2008-09-11 Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: bug-buddy branched for 2.24.

2008-09-10  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Add sr@latin (replacement for sr@Latn).

2008-09-07  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* people.xml.in: Add hackergotchi for Vincent van