@@ -719,7 +719,7 @@
       <module id="fast-user-switch-applet"/>
       <module id="file-roller"/>
       <module id="gcalctool"/>
-      <module id="gconf-editor"/>
+      <module id="gconf-editor" branch="gnome-2-24"/>
       <module id="gdm"/>
       <module id="gedit"/>
       <module id="gnome-applets" branch="gnome-2-24"/>
