@@ -1,3 +1,8 @@
+2008-09-25  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:  gconf-editor branched for GNOME 2.24.
+
 2008-09-23  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
